--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -3,7 +3,7 @@ $mobileMinLandscape: 576px;
 $mobileMaxLandscape: 767px;
 $tabMinPortrait: 768px;
 $tabMaxLandscape: 991px;
-$tabXLMinPortrait: 992px;
+// $tabXLMinPortrait: 992px;
 $tabXLMaxLandscape: 1200px;
 $smallScreenMinPortrait: 1201px;
 $smallScreenMaxLandscape: 1300px;
@@ -401,7 +401,7 @@ header img:nth-child(2) {
 	}
 
 	.footer_sec {
-		margin: 0px 30px;
+		margin: 0px 20px;
 	}
 
 	hr {
@@ -438,6 +438,79 @@ header img:nth-child(2) {
 
 }
 
+@media (min-width: $mobileMinLandscape) and (max-width: $tabXLMaxLandscape) {
+	p {
+		line-height: 31px;
+	}
+
+	.logo {
+		text-align: left;
+	}
+
+	header img:nth-child(1) {
+		display: none;
+	}
+
+	header img:nth-child(2) {
+		display: block;
+	}
+	h2 {
+		line-height: 35px;
+	}
+
+	.green_box h3 {
+		line-height: 28px;
+	}
+	.center_divider {
+		width: 80px;
+	}
+
+	.center_line {
+		height: 0.1px;
+		width: 100%;
+		margin: 28px 0px;
+		display: block;
+	}
+	.citizen_sec .advance_wrapper:nth-child(4) .center_line {
+		margin-left: 0px;
+	}
+	.citizen_sec .advance_wrapper:nth-child(4) {
+		margin-top: 30px;
+	}
+	.citizen_sec .advance_wrapper:nth-child(4) .column:nth-child(1) {
+		padding-top: 27px;
+	}
+	.sub_txt p {
+		padding: 21px 15px;
+	}
+	hr {
+		margin-top: 110px;
+	}
+	.social_icons {
+		margin-bottom: 24px;
+	}
+
+	.footer_desc {
+		margin-bottom: 37px;
+	}
+	
+	#citizen_mob .column {
+		width: 100%;
+	}
+	.card_wrapper .card figure {
+		max-width: 180px;
+	}
+	.home_loan {
+		margin-top: 20px;
+	}
+	#citizen_mob .advance_wrapper .column p {
+		margin-right: 0px;
+	}
+	.card img {
+		width: 150px;
+	}
+
+}
 @media (min-width: $mobileMinLandscape) and (max-width: $mobileMaxLandscape) {
 
 
@@ -446,52 +519,10 @@ header img:nth-child(2) {
 		margin-right: 20px;
 	}
 
-	p {
-		line-height: 31px;
-	}
-
-	.logo {
-		text-align: left;
-	}
-
-	header img:nth-child(1) {
-		display: none;
-	}
-
-	header img:nth-child(2) {
-		display: block;
-	}
-
+	
 	.advance_wrapper,
 	.card_wrapper {
 		display: block;
-	}
-
-	h2 {
-		line-height: 35px;
-	}
-
-	.green_box h3 {
-		line-height: 28px;
-	}
-
-	.center_divider {
-		width: 80px;
-	}
-
-	.center_line {
-		height: 0.1px;
-		width: 100%;
-		margin: 28px 0px;
-		display: block;
-	}
-
-	.citizen_sec .advance_wrapper:nth-child(4) .center_line {
-		margin-left: 0px;
-	}
-
-	.citizen_sec .advance_wrapper:nth-child(4) {
-		margin-top: 30px;
 	}
 
 	.citizen_sec .advance_wrapper:nth-child(4)::before {
@@ -502,120 +533,35 @@ header img:nth-child(2) {
 		width: 100%;
 		height: 0.1px;
 	}
-
-	.citizen_sec .advance_wrapper:nth-child(4) .column:nth-child(1) {
-		padding-top: 27px;
-	}
-
-	.sub_txt p {
-		padding: 21px 15px;
-	}
-
-	.card_wrapper .card:nth-child(2) {
+		.card_wrapper .card:nth-child(2) {
 		margin: 90px 0px;
-	}
-
-	hr {
-		margin-top: 110px;
-	}
-
-	.social_icons {
-		margin-bottom: 24px;
-	}
-
-	.footer_desc {
-		margin-bottom: 37px;
 	}
 
 	#citizen_mob .column {
 		width: 100%;
 	}
-
-	#citizen_mob .advance_wrapper .column p {
-		margin-right: 0px;
-	}
-
-	.card img {
-		width: 150px;
-	}
-
-	.card_wrapper .card figure {
-		max-width: 180px;
-	}
-
-	.home_loan {
-		margin-top: 20px;
-	}
-
 }
 
 
-@media (min-width: $tabMinPortrait) and (max-width: $tabMaxLandscape) {
-
-	p {
-		line-height: 31px;
-	}
-
-	.logo {
-		text-align: left;
-	}
-
-	header img:nth-child(1) {
-		display: none;
-	}
-
-	header img:nth-child(2) {
-		display: block;
-	}
+@media (min-width: $tabMinPortrait) and (max-width: $tabXLMaxLandscape) {
 
 	.invest_sec,
 	.advance_wrapper {
 		padding: 0px;
 	}
-
 	.container {
 		margin-left: 30px;
 		margin-right: 30px;
 	}
-
 	.advance_wrapper {
 		display: block;
 	}
-
 	.card_wrapper {
 		display: flex;
 		gap: 12px;
 		margin-top: 12px;
 		justify-content: space-between;
 	}
-
-	h2 {
-		line-height: 35px;
-	}
-
-	.green_box h3 {
-		line-height: 28px;
-	}
-
-	.center_divider {
-		width: 80px;
-	}
-
-	.center_line {
-		height: 0.1px;
-		width: 100%;
-		margin: 28px 0px;
-		display: block;
-	}
-
-	.citizen_sec .advance_wrapper:nth-child(4) .center_line {
-		margin-left: 0px;
-	}
-
-	.citizen_sec .advance_wrapper:nth-child(4) {
-		margin-top: 30px;
-	}
-
 	.citizen_sec .advance_wrapper:nth-child(4)::before {
 		content: '';
 		width: 10px;
@@ -624,179 +570,12 @@ header img:nth-child(2) {
 		width: 100%;
 		height: 0.1px;
 	}
-
-	.citizen_sec .advance_wrapper:nth-child(4) .column:nth-child(1) {
-		padding-top: 27px;
-	}
-
-	.home_loan {
-		margin-top: 20px;
-	}
-
-	.sub_txt p {
-		padding: 21px 15px;
-	}
-
 	.card_wrapper .card:nth-child(2) {
 		margin: 0px;
 	}
-
 	.card_wrapper .card {
 		width: 30%;
 	}
-
-	hr {
-		margin-top: 110px;
-	}
-
-	.social_icons {
-		margin-bottom: 24px;
-	}
-
-	.footer_desc {
-		margin-bottom: 37px;
-	}
-
-	#citizen_mob .column {
-		width: 100%;
-	}
-
-	#citizen_mob .advance_wrapper .column p {
-		margin-right: 0px;
-	}
-
-	.card img {
-		width: 150px;
-	}
-
-	.card_wrapper .card figure {
-		max-width: 180px;
-	}
-
-}
-
-@media (min-width: $tabXLMinPortrait) and (max-width: $tabXLMaxLandscape) {
-
-	p {
-		line-height: 31px;
-	}
-
-	.logo {
-		text-align: left;
-	}
-
-	header img:nth-child(1) {
-		display: none;
-	}
-
-	header img:nth-child(2) {
-		display: block;
-	}
-
-	.invest_sec,
-	.advance_wrapper {
-		padding: 0px;
-	}
-
-	.container {
-		margin-left: 30px;
-		margin-right: 30px;
-	}
-
-	.advance_wrapper {
-		display: block;
-	}
-
-	.card_wrapper {
-		display: flex;
-		gap: 12px;
-		justify-content: space-between;
-	}
-
-	h2 {
-		line-height: 35px;
-	}
-
-	.green_box h3 {
-		line-height: 28px;
-	}
-
-	.center_divider {
-		width: 80px;
-	}
-
-	.center_line {
-		height: 0.1px;
-		width: 100%;
-		margin: 28px 0px;
-		display: block;
-	}
-
-	.citizen_sec .advance_wrapper:nth-child(4) .center_line {
-		margin-left: 0px;
-	}
-
-	.citizen_sec .advance_wrapper:nth-child(4) {
-		margin-top: 30px;
-	}
-
-	.citizen_sec .advance_wrapper:nth-child(4)::before {
-		content: '';
-		width: 10px;
-		background: #c0c0c0;
-		display: block;
-		width: 100%;
-		height: 0.1px;
-	}
-
-	.citizen_sec .advance_wrapper:nth-child(4) .column:nth-child(1) {
-		padding-top: 27px;
-	}
-
-	.home_loan {
-		margin-top: 22px;
-	}
-
-	.sub_txt p {
-		padding: 21px 15px;
-	}
-
-	.card_wrapper .card:nth-child(2) {
-		margin: 0px;
-	}
-
-	.card_wrapper .card {
-		width: 30%;
-	}
-
-	hr {
-		margin-top: 110px;
-	}
-
-	.social_icons {
-		margin-bottom: 24px;
-	}
-
-	.footer_desc {
-		margin-bottom: 37px;
-	}
-
-	#citizen_mob .column {
-		width: 100%;
-	}
-
-	#citizen_mob .advance_wrapper .column p {
-		margin-right: 0px;
-	}
-
-	.card img {
-		width: 150px;
-	}
-
-	.card_wrapper .card figure {
-		max-width: 180px;
-	}
-
 }
 
 @media (min-width: $smallScreenMinPortrait) and (max-width: $smallScreenMaxLandscape) {
